<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.legatir.mylearnenglish.MoreInfo"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:popupTheme="@style/AppTheme"
        android:id="@+id/toolbar_learn_words"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#001967"
        app:theme="@style/ThemeOverlay.AppCompat"
        >

    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginTop="22sp"
                android:textSize="25sp"
                android:text="English Without a Teacher"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="4sp"
                android:layout_margin="20sp"
                android:background="#8989"></View>
            <TextView
                android:id="@+id/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="about app ..."
                android:textStyle="normal"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_margin="20sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_marginTop="22sp"
                android:textSize="25sp"
                android:text="מילון מושגים"
                android:gravity="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="4sp"
                android:layout_margin="20sp"
                android:background="#8989"></View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginRight="50sp"
                android:layout_marginLeft="50sp"
                android:layout_marginBottom="20sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learnWords"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableRight="@drawable/learnword"
                android:layout_gravity="right"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercice"
                android:gravity="center"
                android:drawableRight="@drawable/exercise"
                android:layout_gravity="right"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercice"
                android:gravity="center"
                android:drawableRight="@drawable/sound"
                android:layout_gravity="right"
                android:textSize="20sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moreQuery"
                android:gravity="center"
                android:drawableRight="@drawable/morequery"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_gravity="right"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setlectExam"
                android:gravity="center"
                android:drawableRight="@drawable/exam"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
